--- a/app/src/main/res/layout/act_test.xml
+++ b/app/src/main/res/layout/act_test.xml
@@ -19,8 +19,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:orientation="horizontal"
-        android:baselineAligned="false">
+        android:baselineAligned="false"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -52,15 +52,16 @@
             </LinearLayout>
 
             <View
-                android:background="@color/colorPrimary"
+                android:id="@+id/indicatorDaiBan"
                 android:layout_width="match_parent"
                 android:layout_height="1dp" />
 
         </LinearLayout>
 
-        <View android:layout_height="match_parent"
+        <View
             android:layout_width="1px"
-            android:background="@color/md_grey_400"/>
+            android:layout_height="match_parent"
+            android:background="@color/md_grey_400" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -76,7 +77,6 @@
                 android:orientation="horizontal">
 
                 <ImageView
-
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/yiban" />
@@ -92,11 +92,18 @@
             </LinearLayout>
 
             <View
+                android:id="@+id/indicatorYiBan"
                 android:layout_width="match_parent"
                 android:layout_height="1dp" />
 
         </LinearLayout>
 
     </LinearLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
 </LinearLayout>
