--- a/app/src/main/res/layout/act_general.xml
+++ b/app/src/main/res/layout/act_general.xml
@@ -22,6 +22,7 @@
         android:orientation="horizontal">
 
         <LinearLayout
+            android:id="@+id/tabDaiBan"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -63,6 +64,7 @@
             android:background="@color/md_grey_400" />
 
         <LinearLayout
+            android:id="@+id/tabYiBan"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
