--- a/app/src/main/res/layout/act_general.xml
+++ b/app/src/main/res/layout/act_general.xml
@@ -13,11 +13,12 @@
         android:background="@color/colorPrimary"
         android:gravity="center"
         android:textColor="@color/md_white"
-        android:textSize="19dp" />
+        android:textSize="20dp" />
 
     <LinearLayout
+        android:background="@color/md_white"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
+        android:layout_height="50dp"
         android:baselineAligned="false"
         android:orientation="horizontal">
 
@@ -54,14 +55,14 @@
             <View
                 android:id="@+id/indicatorDaiBan"
                 android:layout_width="match_parent"
-                android:layout_height="1dp" />
+                android:layout_height="2dp" />
 
         </LinearLayout>
 
         <View
             android:layout_width="1px"
             android:layout_height="match_parent"
-            android:background="@color/md_grey_400" />
+            android:background="@color/md_grey_300" />
 
         <LinearLayout
             android:id="@+id/tabYiBan"
@@ -95,7 +96,7 @@
             <View
                 android:id="@+id/indicatorYiBan"
                 android:layout_width="match_parent"
-                android:layout_height="1dp" />
+                android:layout_height="2dp" />
 
         </LinearLayout>
 
