--- a/app/src/main/res/layout/item_shou_wen.xml
+++ b/app/src/main/res/layout/item_shou_wen.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
     android:orientation="vertical"
+    android:background="@color/md_white"
     tools:ignore="SpUsage,HardcodedText">
 
     <TextView
