--- a/app/src/main/res/layout/item_flow_node.xml
+++ b/app/src/main/res/layout/item_flow_node.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/root"
+    android:clickable="true"
+    android:focusable="true"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/md_white"
+    android:foreground="?attr/selectableItemBackground"
     android:orientation="vertical"
     tools:ignore="SpUsage,HardcodedText,ContentDescription">
 
