--- a/app/src/main/res/layout/item_flow_node.xml
+++ b/app/src/main/res/layout/item_flow_node.xml
@@ -1,20 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/root"
-    android:clickable="true"
-    android:focusable="true"
+<RadioButton xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rbName"
+    android:textSize="16dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/md_white"
-    android:foreground="?attr/selectableItemBackground"
-    android:orientation="vertical"
-    tools:ignore="SpUsage,HardcodedText,ContentDescription">
-
-    <RadioButton
-        android:id="@+id/rbName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="RadioButton" />
-
-</LinearLayout>
+    android:layout_height="50dp"
+    tools:ignore="SpUsage,HardcodedText,ContentDescription" />
