--- a/app/src/main/res/layout/item_staff.xml
+++ b/app/src/main/res/layout/item_staff.xml
@@ -2,7 +2,7 @@
 <RadioButton xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rbName"
-    android:layout_width="match_parent"
-    android:layout_height="64dp"
     android:textSize="16dp"
-    tools:ignore="SpUsage,HardcodedText" />
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    tools:ignore="SpUsage,HardcodedText,ContentDescription" />
