--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="main_height">60dp</dimen>
+    <dimen name="main_height">100dp</dimen>
     <dimen name="main_margin">12dp</dimen>
+    <dimen name="main_text_size">18dp</dimen>
 </resources>
