--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -287,4 +287,88 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/sbly"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/main_height"
+        android:layout_marginTop="@dimen/main_margin"
+        android:background="#FB667A"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toStartOf="@+id/sbwx"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/wply">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/sbly" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="设备领用"
+            android:textColor="@color/md_white"
+            android:textSize="@dimen/main_text_size" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/sbwx"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/main_height"
+        android:layout_marginStart="@dimen/main_margin"
+        android:background="#0789BA"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toStartOf="@+id/sbbf"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toEndOf="@+id/sbly"
+        app:layout_constraintTop_toTopOf="@+id/sbly">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/sbwx" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="设备维修"
+            android:textColor="@color/md_white"
+            android:textSize="@dimen/main_text_size" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/sbbf"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/main_height"
+        android:background="#F7B239"
+        android:gravity="center"
+        android:layout_marginStart="@dimen/main_margin"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toEndOf="@+id/sbwx"
+        app:layout_constraintTop_toTopOf="@+id/sbly">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/sbbf" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="设备报废"
+            android:textColor="@color/md_white"
+            android:textSize="@dimen/main_text_size" />
+
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
