--- a/app/src/main/res/layout/act_shou_wen_detail.xml
+++ b/app/src/main/res/layout/act_shou_wen_detail.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".remove.business.gwgl.detail.ShouWenDetailAct">
+    tools:context=".toRemove.business.gwgl.detail.ShouWenDetailAct">
 
 </android.support.constraint.ConstraintLayout>
