--- a/app/src/main/res/layout/act_jddb_detail.xml
+++ b/app/src/main/res/layout/act_jddb_detail.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     tools:ignore="HardcodedText,SpUsage,RtlSymmetry">
 
-    <com.unicorn.sxmobileoa.app.TitleBar
+    <com.unicorn.sxmobileoa.app.ui.TitleBar
         android:id="@+id/titleBar"
         android:layout_width="match_parent"
         android:layout_height="56dp" />
