--- a/app/src/main/res/layout/fra_dblb.xml
+++ b/app/src/main/res/layout/fra_dblb.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.unicorn.sxmobileoa.app.TitleBar
+    <com.unicorn.sxmobileoa.app.ui.TitleBar
         android:id="@+id/titleBar"
         android:layout_width="match_parent"
         android:layout_height="56dp" />
