--- a/app/src/main/res/layout/item_court.xml
+++ b/app/src/main/res/layout/item_court.xml
@@ -1,19 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:id="@+id/root"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/tvDmms"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp"
-    tools:ignore="SpUsage">
+    android:layout_height="40dp"
+    android:textColor="@color/md_black"
+    android:textSize="16dp"
+    android:background="@color/md_white"
+    tools:ignore="SpUsage" />
 
-    <TextView
-        android:id="@+id/tvBt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/md_black"
-        android:textSize="15dp" />
-
-</LinearLayout>
