--- a/app/src/main/res/layout/act_jddb_detail.xml
+++ b/app/src/main/res/layout/act_jddb_detail.xml
@@ -117,6 +117,35 @@
 
                 </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:layout_marginTop="1px"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="120dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/md_grey_100"
+                        android:gravity="center"
+                        android:text="部门领导\n意见"
+                        android:textColor="@color/md_black"
+                        android:textSize="15dp" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="1px"
+                        android:layout_weight="1"
+                        android:background="@color/md_white"
+                        android:gravity="center_vertical"
+                        android:paddingStart="16dp"
+                        android:text="来访事由、时间及行程安排"
+                        android:textColor="@color/md_black"
+                        android:textSize="15dp" />
+
+                </LinearLayout>
+
             </LinearLayout>
 
         </LinearLayout>
