--- a/app/src/main/res/layout/header_main.xml
+++ b/app/src/main/res/layout/header_main.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/root"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
-    android:layout_height="64dp"
-    android:gravity="center_vertical"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:clickable="true"
-    android:focusable="true"
+    android:paddingBottom="12dp"
+    android:paddingTop="16dp"
     tools:ignore="SpUsage,HardcodedText">
 
+    <View
+        android:layout_width="2dp"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="2dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="2dp"
+        android:background="@color/colorPrimary" />
+
     <TextView
-        android:id="@+id/tvHeader"
+        android:id="@+id/tvText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/md_black"
-        android:textSize="16dp" />
+        android:layout_marginStart="8dp"
+        android:textColor="@color/md_grey_600"
+        android:textSize="15dp" />
 
 </LinearLayout>
