--- a/app/src/main/res/layout/header_main.xml
+++ b/app/src/main/res/layout/header_main.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/root"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="48dp"
+    android:gravity="center_vertical"
     android:orientation="horizontal"
     tools:ignore="SpUsage,HardcodedText">
 
     <View
         android:layout_width="2dp"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="2dp"
+        android:layout_height="15dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="2dp"
         android:background="@color/colorPrimary" />
 
     <TextView
