--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="64dp"
+    android:layout_marginBottom="16dp"
+    android:gravity="center"
     android:orientation="vertical"
     tools:ignore="SpUsage,HardcodedText,ContentDescription">
 
@@ -12,26 +13,14 @@
         android:id="@+id/ivImage"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:layout_marginTop="4dp"
-        android:clickable="false"
-        android:focusable="false"
-        android:scaleType="fitXY"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:scaleType="fitXY" />
 
     <TextView
         android:id="@+id/tvText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="12dp"
         android:text="什么管理"
         android:textColor="@color/md_black"
-        android:textSize="14dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/ivImage"
-        app:layout_constraintStart_toStartOf="@+id/ivImage"
-        app:layout_constraintTop_toBottomOf="@+id/ivImage" />
+        android:textSize="13dp" />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
