--- a/app/src/main/res/layout/act_login.xml
+++ b/app/src/main/res/layout/act_login.xml
@@ -48,6 +48,7 @@
             android:layout_marginStart="32dp"
             android:textColor="@color/md_black"
             android:textSize="16dp"
+            android:hint="选择法院"
             app:layout_constraintBaseline_toBaselineOf="@+id/tvCourtLabel"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
