--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root"
     android:layout_width="match_parent"
-    android:layout_height="64dp"
+    android:layout_height="56dp"
     android:layout_marginBottom="16dp"
+    android:background="?attr/selectableItemBackground"
     android:gravity="center"
     android:orientation="vertical"
     tools:ignore="SpUsage,HardcodedText,ContentDescription">
@@ -19,6 +20,7 @@
         android:id="@+id/tvText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
         android:text="什么管理"
         android:textColor="@color/md_black"
         android:textSize="13dp" />
