--- a/app/src/main/res/layout/item_court.xml
+++ b/app/src/main/res/layout/item_court.xml
@@ -3,9 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/tvDmms"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="56dp"
+    android:background="@color/md_white"
+    android:gravity="center_vertical"
+    android:paddingStart="16dp"
     android:textColor="@color/md_black"
     android:textSize="16dp"
-    android:background="@color/md_white"
-    tools:ignore="SpUsage" />
+    tools:ignore="RtlSymmetry,SpUsage" />
 
